fix 'fdqn' -> 'fqdn'
